<resources>
    <string name="app_name">DemoCUKCUKLite</string>
    <string name="add_order">Thêm món</string>
    <string name="app_name_up_case">CUKCUK LITE</string>
    <string name="action_add">add</string>
    <string name="add_unit">Thêm đơn vị tính</string>
    <string name="add_dish">Thêm món</string>
    <string name="login_with_facebook">Đăng nhập bằng Facebook</string>
    <string name="login_with_google">Đăng nhập bằng Google</string>
    <string name="login_with_phone">Đăng nhập bằng số điện thoại hoặc email</string>
    <string name="login">Đăng nhập</string>
    <string name="color">Màu sắc</string>
    <string name="cancel">Hủy bỏ</string>
    <string name="dish_name"><![CDATA[Tên món <font color=red>*</font>]]></string>
    <string name="delete">Xóa</string>
    <string name="done">Xong</string>
    <string name="enter_dish_name_hint">Nhập tên món</string>
    <string name="enter_dish_name">Nhập tên món</string>
    <string name="enter_unit">Nhập đơn vị tính</string>
    <string name="edit_dish">Sửa món</string>
    <string name="edit_unit">Sửa đơn vị tính</string>
    <string name="forgot_password">Quên mật khẩu?</string>
    <string name="icon">Biểu tượng</string>
    <string name="label_unit"><![CDATA[Đơn vị tính <font color=red>*</font>]]></string>
    <string name="menu_sale">Bán hàng</string>
    <string name="menu_order">Thực đơn</string>
    <string name="nav_drawer_close">đóng</string>
    <string name="nav_drawer_open">mở</string>
    <string name="menu_slideshow">Báo cáo</string>
    <string name="no_have_account">Bạn chưa có tài khoản?Tạo mới</string>
    <string name="number_phone_or_email">Số điện thoại hoặc email</string>
    <string name="no">Không</string>
    <string name="password_hint">Mật khẩu</string>
    <string name="price">Giá bán: </string>
    <string name="stop_sell">Ngừng bán</string>
    <string name="save_login">Lưu thông tin</string>
    <string name="save">Cất</string>
    <string name="sign_in">Đăng ký</string>
    <string name="status">Trạng thái</string>
    <string name="yes">Có</string>
    <string name="ok">Chọn</string>
    <string name="you_can_delete_unit"><![CDATA[Bạn có chắc chắn muốn xóa đơn vị tính <font style=bold;color=black></font> không?]]></string>
    <string name="unit_used">Đơn vị đã được sử dụng. Bạn không được phép xóa</string>
    <string name="not_select_unit">Bạn chưa chọn đơn vị</string>
    <string name="not_exist_unit">Đơn vị (%s) đã tồn tại</string>
    <string name="select_unit">Chọn đơn vị tính</string>
    <string name="unit">Đơn vị tính</string>
    <string name="not_empty_dish_name">Tên món không được để trống</string>

    //nav
    <string name="cong">Trần Đình Công</string>
    <string name="image_view">ImageView</string>
    <string name="sell">Bán hàng</string>
    <string name="report">Báo cáo</string>
    <string name="setting">Thiết lập</string>
    <string name="sync">Đồng bộ dữ liệu</string>
    <string name="connect">Liên kết tài khoản</string>
    <string name="help">Trợ giúp</string>
    <string name="noti">Thông báo</string>
    <string name="suggest">Giới thiệu cho bạn</string>
    <string name="rate">Đánh giá ứng dụng</string>
    <string name="feed_back">Góp ý cho nhà phát triển</string>
    <string name="info">Thông tin sản phẩm</string>
    <string name="account">Tài khoản</string>
    <string name="logout">Đăng xuât</string>
    <string name="change_pass">Đặt mật khẩu</string>
    <string name="menu">Thực đơn</string>

    <string name="fragment_picker">fragment_picker</string>
    <string name="pick_color">Chọn màu</string>
    <string name="confirm_remove_dish">Bạn có chắc chắn muốn xóa món %s không?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="zero">0</string>
    <string name="price_sale">Giá bán</string>
    <string name="dialog_calculator">dialog_calculator</string>

    <string name="facebook_app_id">2352052975042785</string>
    <string name="fb_login_protocol_scheme">fb2352052975042785</string>
    <string name="verifiation">Truy cập Email để xác thực tài khoản</string>
    <string name="msg_login_success">Đăng nhập thành công!</string>
    <string name="facebook_login_failed">Thất bại!</string>
    <string name="facebook_registed">Đăng nhập thành công!</string>

</resources>
