<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/app_margin_medium">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/color_primary"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="@dimen/app_margin_medium">

        <TextView
            style="@style/FontHeaderTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/price_sale"
            android:textColor="@color/color_white" />

        <ImageView
            android:id="@+id/ivButtonCloseKeyboard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/app_name"
            android:padding="@dimen/app_margin_medium"
            android:tint="@color/white"
            app:srcCompat="@drawable/ic_close"
            tools:ignore="VectorDrawableCompat" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/etInputNumber"
            style="@style/FontHeaderTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_border_radius"
            android:ellipsize="start"
            android:gravity="end"
            android:inputType="number"
            android:text="@string/zero"
            tools:ignore="LabelFor" />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rcvKeyboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingEnd="10dp" />
</LinearLayout>