<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_note_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    android:orientation="vertical">

    <include layout="@layout/view_title_dialog" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:minHeight="@dimen/min_height_message_dialog"
        android:orientation="vertical"
        android:paddingLeft="@dimen/app_margin_small"
        android:paddingTop="@dimen/app_margin_medium"
        android:paddingRight="@dimen/app_margin_small"
        android:paddingBottom="@dimen/app_margin_medium">

        <EditText
            android:id="@+id/etUnitName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:background="@android:color/transparent"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/enter_unit"
            android:paddingTop="@dimen/app_margin_medium"
            android:paddingBottom="@dimen/app_margin_medium"
            android:scrollHorizontally="true"
            android:textColor="@color/color_black"
            android:textSize="@dimen/font_size_medium">
            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_gray"
        android:gravity="right"
        android:orientation="horizontal"
        android:visibility="visible">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/bg_white_no_border_radius_selector"
            android:text="@string/cancel"
            android:textAllCaps="true"
            android:textColor="@drawable/selector_text_in_button_cancel" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/selector_button_ok_popup"
            android:text="@string/save"
            android:textAllCaps="true"
            android:layout_margin="@dimen/app_margin_small"
            android:textColor="@color/color_white" />
    </LinearLayout>
</LinearLayout>